[package]
name = "reddit_notifier"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
fern = "0.6.1"
java-properties = "1.4.1"
lettre = "0.10.1"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = "1.0.85"
slice-deque = "0.3.0"
lazy_static = "1.4.0"
regex = "1.6.0"
# Cross removed openssl from their docker: https://github.com/cross-rs/cross/issues/510.  This is a workaround.
openssl = { version = "0.10", features = ["vendored"] }
